Fixed alignment issue with galleria

--- a/index.css
+++ b/index.css
@@ -197,7 +197,7 @@ h3 {
 
 #galleria {
   width: auto;
-  height: 1100px;
+  height: auto;
   background-color: #829c90;
   margin: 0 auto;
 }
@@ -214,7 +214,7 @@ h3 {
 #galleria #projects {
   margin: 0 auto;
   margin-top: 4%;
-  margin-bottom: 2%;
+  padding-bottom: 5%;
   /*margin-left: 12%;*/
   line-height: 0;
   column-count: 5;
@@ -252,11 +252,10 @@ h3 {
 #galleria #box15 {
   margin: 0 auto;
   width: auto;
-  margin: 5px;
+  margin: 0 10px 10px 0;
 }
 
 #galleria img {
-  margin: 0 auto;
   width: 100%;
   height: auto;
   border-radius: 5px;
@@ -264,24 +263,8 @@ h3 {
 }
 
 #galleria #box1 img {
-  height: 70vh;
+  height: 75vh;
   width: auto;
-}
-
-#galleria #button_more_code {
-  width: fit-content;
-  height: fit-content;
-  background-color: #1b3d2f;
-  margin: 0 auto;
-  border-radius: 5px;
-}
-
-#galleria #button_more_code p {
-  color: #ffffff;
-  font-family: Kiona;
-  font-size: 30px;
-  padding: 12px;
-  margin: 0 auto;
 }
 
 #contact_me {
